--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           other supported site</a>. The server will automatically download the highest quality version available.</p>
       <hr class="my-4">
       <div>
-        <form action="/youtube-dl/q" method="POST">
+        <form action="/{{token}}/q" method="POST">
           <div class="input-group">
             <input name="url" type="url" class="form-control" placeholder="URL" aria-label="URL" aria-describedby="button-submit" autofocus>
             <select class="custom-select" name="format">
@@ -58,8 +58,7 @@
     </div>
     <footer>
       <div>
-        <p class="text-muted">Web frontend for <a class="text-light" href="https://rg3.github.io/youtube-dl/">youtube-dl</a>,
-          by <a class="text-light" href="https://twitter.com/manbearwiz">@manbearwiz</a>.</p>
+        <p class="text-muted">Web frontend for <a class="text-light" href="https://rg3.github.io/youtube-dl/">youtube-dl</a></p>
       </div>
     </footer>
   </div>
