--- a/result_not_available.html
+++ b/result_not_available.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous">
   <link href="/{{token}}/static/style.css" rel="stylesheet">
 
-  <title>youtube-dl</title>
+  <title>youtube-dl - Result</title>
 </head>
 
 <body>
@@ -20,27 +20,10 @@
     <div class="flex-grow-1"></div>
     <div class="jumbotron bg-transparent flex-grow-1">
       <h1 class="display-4">youtube-dl</h1>
-      <p class="lead">Enter a video url to download the video to the server. Url can be to YouTube or <a class="text-info"
-          href="https://rg3.github.io/youtube-dl/supportedsites.html">any
-          other supported site</a>. The server will automatically download the highest quality version available.</p>
+      <p>The requested file is not yet available.</p>
+      <p>Wait for the download process to complete (this may take a minute for large files), then try again:</p>
+      <p class="lead"><a href="/{{token}}/result/{{outfile}}">{{outfile}}</a></p>
       <hr class="my-4">
-      <div>
-        <form action="/{{token}}/q" method="POST">
-          <div class="input-group">
-            <input name="url" type="url" class="form-control" placeholder="URL" aria-label="URL" aria-describedby="button-submit" autofocus>
-            <select class="custom-select" name="format">
-                <option value="normalmp4">MP4 (720p)</option>
-                <option value="bestmp4">MP4 (best)</option>
-                <option value="smallmp4">MP4 (480p)</option>
-                <option value="mp3">MP3</option>
-            </select>
-            <input type="hidden" name="return_json" value="false" />
-            <div class="input-group-append">
-              <button class="btn btn-primary" type="submit" id="button-submit">Submit</button>
-            </div>
-          </div>
-        </form>
-      </div>
     </div>
     <footer>
       <div>
