Add backlinks to html pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="container d-flex flex-column text-center">
     <div class="flex-grow-1"></div>
     <div class="jumbotron bg-transparent flex-grow-1">
-      <h1 class="display-4">youtube-dl</h1>
+      <h1 class="display-4"><a href="/{{token}}">youtube-dl</a></h1>
       <p class="lead">Enter a video url to download the video to the server. Url can be to YouTube or <a class="text-info"
           href="https://rg3.github.io/youtube-dl/supportedsites.html">any
           other supported site</a>. The server will automatically download the highest quality version available.</p>
