--- a/result.html
+++ b/result.html
@@ -19,7 +19,7 @@
   <div class="container d-flex flex-column text-center">
     <div class="flex-grow-1"></div>
     <div class="jumbotron bg-transparent flex-grow-1">
-      <h1 class="display-4">youtube-dl</h1>
+      <h1 class="display-4"><a href="/{{token}}">youtube-dl</a></h1>
       <p>The video at <code><a href="{{url}}">{{url}}</a></code> is being downloaded.</p>
       <p>Wait for the process to complete, then download the resulting video file:</p>
       <p class="lead"><a href="/{{token}}/result/{{outfile}}">{{outfile}}</a></p>
