--- a/result_not_available.html
+++ b/result_not_available.html
@@ -19,7 +19,7 @@
   <div class="container d-flex flex-column text-center">
     <div class="flex-grow-1"></div>
     <div class="jumbotron bg-transparent flex-grow-1">
-      <h1 class="display-4">youtube-dl</h1>
+      <h1 class="display-4"><a href="/{{token}}">youtube-dl</a></h1>
       <p>The requested file is not yet available.</p>
       <p>Wait for the download process to complete (this may take a minute for large files), then try again:</p>
       <p class="lead"><a href="/{{token}}/result/{{outfile}}">{{outfile}}</a></p>
